@@ -4,13 +4,13 @@ Hash: SHA1
 AUX mysql-workbench-5.2.11-as-needed.patch 667 RMD160 0b5ee32d011c4ce20473c74743f0c992c319c217 SHA1 a66f109e8757d4caa54245297aa3d9b18c60d40f SHA256 cbdaf75c98e5c7524c75159c14bc0fcc0a7253046cb41190358911763dde4126
 AUX mysql-workbench-5.2.11-configure.in.pythonlib.patch 649 RMD160 ff69015e136a79abb189b7310269b2069c496d05 SHA1 b1e65450dd5f8150cacb76545d11007df2f8db0c SHA256 2ad14218a99fd46dcdac6dbbb51d7d50a381f78e77be07dbe34a43521115f0e4
 DIST mysql-workbench-oss-5.2.11.tar.gz 14979416 RMD160 a12630f90ae8900d18c04ad3ec020747c961422c SHA1 2e5fff37ba9cac09f7dd545b94aea3701dff1d15 SHA256 ba93c0fc6b5e46cccc2f8e89f8d521573d5254db2f2be6db4b065189e2e63321
-EBUILD mysql-workbench-5.2.11.ebuild 1218 RMD160 f90e25e6e2db5d1f3d124793a7c5a9fa531c4c2e SHA1 22e9ca8dbbf964f32fc20e9abca723172bee11f6 SHA256 86e538e93573eb165f1c89c7268ed29b7b984b61ce2d7641f5951129e2826a5a
-MISC ChangeLog 542 RMD160 c420ef446dd33f7e84fc217776f25b2355735a2a SHA1 9fcd6c16bdbf013c6c85e7a01607e9ad7d96de66 SHA256 adab0dc1e820a2a7237528d83c3cddcb6769074e426cb5ee2f5f043264823a5f
+EBUILD mysql-workbench-5.2.11.ebuild 1280 RMD160 dcee9de795a51ffad1d02bd33f9112a696770452 SHA1 b434be684f5737552441c7e28a3b9ec3e3a08f38 SHA256 667326509f288f8c90935f93256011be31188aafa76a47ebf2d5cc975c4d36c6
+MISC ChangeLog 660 RMD160 1403936f46fdd4f31fef739a6b1f01de14364175 SHA1 8864e549af75d6e1c5e8eb596a881b7fe1e0e0f0 SHA256 f33aafcb5132a9a5276a4bc53c84c37627d03780455cb14fc706303429e3f0b5
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAks3mcYACgkQeM7EJeUH71NtLACcDDX6va6oZ/GeunN4/xCc+Cs1
-mu0AoIxBJ9VMUqxy9z/m/vwHkzLcHUHn
-=hvKH
+iEYEARECAAYFAktIYawACgkQeM7EJeUH71NcvQCdE/dhVaCx2+68EXonp2uzB4SI
+AnIAn2yBfH7mqq6A/hacEPiZIvGh0dUS
+=GFyJ
 -----END PGP SIGNATURE-----
